# rs-code-segment

./: .gitignore  README.md
design_mode/: Cargo.toml  readme.md
design_mode/src/: main.rs
design_mode/src/behavioral/: chain_of_responsibility.rs  command.rs  iterator.rs  mod.rs  observer.rs  state.rs  strategy.rs
design_mode/src/builder/: builder_mode.rs  builder_part.rs  mod.rs
design_mode/src/factory/: abstract_factory.rs  factory.rs  mod.rs  singleton.rs
design_mode/src/split/: mod.rs  split_mode.rs
design_mode/src/structural/: adapter.rs  decorator.rs  mod.rs  proxy.rs
design_mode/tests/: behavioral_test.rs  builder_factory_test.rs  structural_test.rs
file-sharing/: Cargo.toml  READEME.MD
file-sharing/src/: arg.rs  main.rs
file-sharing/src/client/: command.rs
json-parse/: Cargo.toml
json-parse/data/: test.json  test1.json  test2.json
json-parse/src/: main.rs  parser.rs
life-time/: Cargo.toml
life-time/src/: main.rs  str_split.rs
nom-examples/: Cargo.toml
nom-examples/src/: main.rs
read-file/: Cargo.toml
read-file/src/: main.rs
read-file/src/file/: file_read.rs  mod.rs
toml-parse/: Cargo.toml
toml-parse/src/: main.rs
toml-parse/src/common/: common.rs
toml-parse/src/conf/: mod.rs  peom_config.rs  properties.rs
toml-parse/src/env/: enviroment.rs  mod.rs
toml-parse/src/errors/: error.rs
