[package]
name = "file-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
libp2p = {version = "0.50.0"}
tokio = { version = "1.23.0", features = ["full"] }
